--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "on_cycles": 3,
     "off_cycles": 2,
     "jitter_percent": 0.25,
-    "mirror_mode": "reverse"
+    "mirror_mode": "mirror"
 }
